--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@vitalets/google-translate-api": "^8.0.0",
+    "discord-api-types": "^0.29.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "google-translate-api": "^2.3.0",
+    "google-translate-token": "^1.0.0",
     "install": "^0.13.0",
     "ms": "^3.0.0-canary.1",
     "node": "16.6.1",
